[package]
name = "rust-jp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
kalosm = { version = "0.4.0", features = ["language", "metal", "sound", "surrealdb"] }
surrealdb = { version = "2.3.2", features = ["kv-surrealkv"] }
tokio = { version = "1.45.0", features = ["macros"] }
